# debussy_demo_app

./: README.md
DEBUSSY_Client_cmake/: README.md
DEBUSSY_Client_cmake/Client_DEBUSSY_src/: CMakeLists.txt  client_debussy.cpp  client_debussy.h  client_debussy.qrc  client_debussy.ui  main.cpp
debussy_rtos_tcp/: .ccsproject  README.md  TMDXDOCK28M36.c  tcp_main.c  tcp_main.cfg
debussy_rtos_tcp/.config/xconfig_tcp_main/: .buildtime  .xdcenv.mak  compiler.defs  compiler.opt  config.bld  custom.mak  package.bld  package.mak  package.xdc
debussy_rtos_tcp/.config/xconfig_tcp_main/package/: package.bld.xml  package.defs.h  package.xdc.dep  package.xdc.inc  package_xconfig_tcp_main.c  xconfig_tcp_main.ccs  xconfig_tcp_main.java  xconfig_tcp_main.pjt
debussy_rtos_tcp/.config/xconfig_tcp_main/package/cfg/: tcp_main.xem3.mak  tcp_main_pem3.cfg  tcp_main_pem3.mak  tcp_main_xem3.uia.xml
